fix(tastic): remove spacing from empty tastics
(project merge back 2019-05-06)

--- a/src/scss/elements/_elements.tastic.scss
+++ b/src/scss/elements/_elements.tastic.scss
@@ -23,3 +23,8 @@
 .e-tastic {
     width: 100%;
 }
+
+.e-tastic__apollo-metaOrganization,
+.e-tastic__apollo-metaWebsiteSearchbox {
+  margin-top: 0;
+}
